project(Euler001)
add_executable(Euler001 Contests/ProjectEuler/Euler001.cpp)

project(Euler002)
add_executable(Euler002 Contests/ProjectEuler/Euler002.cpp)

project(Euler003)
add_executable(Euler003 Contests/ProjectEuler/Euler003.cpp)

project(Euler004)
add_executable(Euler004 Contests/ProjectEuler/Euler004.cpp)